# evoting-systems

./: .gitmodules  README.md
DVLs/AegisDVL/Documentation/: Command_Formal.bon  Command_Informal.bon  Communicator_Formal.bon  Communicator_Informal.bon  Core_Datatypes.bon  Core_Datatypes_Formal.bon  Crypto_Formal.bon  Crypto_Informal.bon  DVL.html  Database_Formal.bon  Database_Informal.bon  Logger_Formal.bon  Logger_Informal.bon  Scanner_Formal.bon  Scanner_Informal.bon  Station_Formal.bon  Station_Informal.bon  System_Informal.bon  UI_Formal.bon  UI_Informal.bon  compilebon.txt
DVLs/AegisDVL/Latex report/: ContractCoverage.txt  Manual.tex  Revision_History.txt  Thumbs.db  bachelor.tex
DVLs/AegisDVL/Sample Data/: VoterData.data
DVLs/AegisDVL/UPPAAL/: Aegis DVL UPPALL.q  Aegis DVL UPPALL.xml
DVLs/PX3-BDSA-E2011/: .gitignore
DVLs/PX3-BDSA-E2011/db/: model.mwb
DVLs/PX3-BDSA-E2011/spec/: DigitalVoterList.bon  class_relations.bon  formal.bon  informal.bon  informal.html  scenarios.bon
EVTs/EML Voting Project/: EML-440-formatting-xdp.xml  EMLproject.tar
EVTs/EML Voting Project/EML-Ballot-Samples/: EML scanner XML processing.ppt  EML410_NY_sample.xml  EML440_1234567.xml  EML440_1234568.xml  EML510_Counting.xml  EML520_Result.xml  ovs-EML520-results.xsl
EVTs/EML Voting Project/connecticutVotingDemo/: .project  build.xml
EVTs/EML Voting Project/iTalyVotingDemo/: .classpath  build.xml
EVTs/EVACS/: analysis.txt
EVTs/EVACS/evacs/: Makefile
EVTs/Helios/: SEE.txt  SOURCE
EVTs/LiquidFeedback/liquid_feedback_core-v2.2.3/: LICENSE  Makefile  (+8 more)
EVTs/Scantegrity/: .project  LICENSE  embed.html  pom.xml
EVTs/VHTi-1.0.0.72/: README.Building.txt  README.license.txt  README.txt
EVTs/Victoria/: Calculate.cs  CalculateBL.cs  CalculatePR.xml  VEC's Election Management Systems.webloc
EVTs/adder/: README
EVTs/adder/cryptoserver/: AUTHORS  Makefile.am  Makefile.in  README  acinclude.m4  config.h.in  configure  configure.ac  cryptoserver.8.in  cryptoserver.conf.5.in  cryptoserver.init.in  cryptoserver.spec.in
EVTs/adder/cryptoserver/autom4te.cache/: output.0  requests  traces.0  traces.1
EVTs/adder/cryptoserver/database/: INSTALL.mysql  permissions.sql  schema.sql  test-data.sql
EVTs/adder/cryptoserver/debian/: changelog  control  copyright  cryptoserver-default  init.d  rules
EVTs/adder/cryptoserver/src/: ClientHandler.cc  ClientHandler.hh  Database.cc  Database.hh  DecryptionHandler.hh  ElectionTimeoutHandler.hh  Makefile.am  Makefile.in  Options.cc  Options.hh  Utilities.cc  Utilities.hh  cryptoserver.conf.ex  main.cc
EVTs/adder/libadder/: INSTALL.WIN32  Makefile.am  Makefile.in  README  README.WIN32  acinclude.m4  autogen.sh  config.h.in  configure  configure.ac  entropy.m4  exceptions.m4  libadder.pc.in  libadder.spec.in
EVTs/adder/libadder/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
EVTs/adder/libadder/debian/: changelog  control  copyright  rules  shlibs.local
EVTs/adder/libadder/src/: Context.cpp  Context.h  Doxyfile.in  ElgamalCiphertext.cpp  ElgamalCiphertext.h  Integer.cpp  Integer.h  Makefile.am  Makefile.in  MembershipProof.cpp  MembershipProof.h  Polynomial.cpp  Polynomial.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  Vote.cpp  Vote.h  VoteProof.cpp  VoteProof.h  common.h  config-win32.h  exceptions.h  libadder.h  libadder.rc  libadder.sln  libadder.vcproj  misc.cpp  misc.h  radix64.cpp  radix64.h  resource.h
EVTs/adder/libadder/tests/: Makefile.am  Makefile.in  addertest.cpp  enctest.cpp  inttest.cpp  keytest.cpp  newzkptest.cpp  polytest.cpp  sha1test.cpp  timetest.cpp  zkptest.cpp
EVTs/adder/php-adder/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac  php-adder.spec.in
EVTs/adder/php-adder/autom4te.cache/: output.0  requests  traces.0  traces.1
EVTs/adder/php-adder/debian/: changelog  control  copyright  dirs  rules
EVTs/adder/php-adder/etc/: Makefile.am  Makefile.in  apache-php-adder.conf  php-adder.conf
EVTs/adder/php-adder/log/: Makefile.am  Makefile.in
EVTs/adder/php-adder/share/: Makefile.am  Makefile.in  adder_interface.php  applet-applet-include.txt  applet-include.txt  applet-object-include-1.4.txt  applet-object-include-1.5.txt  applet-object-include-gecko-1.4.txt  applet-object-include-gecko-1.5.txt  applet-object-include-msie-1.4.txt  applet-object-include-msie-1.5.txt  createkey.inc.php  createpolynomial.inc.php  createprocedure.inc.php  decrypt.inc.php  decryptsuccess.inc.php  error.inc.php  footer.inc.php  getauthkey.inc.php  getballotproof.inc.php  getprivkey.inc.php  getvote.inc.php  header.inc.php  login.inc.php  logoutsuccess.inc.php  makeuser.inc.php  makeusersuccess.inc.php  mimetype.inc.php  plugin.inc.php  polynomialsuccess.inc.php  procedurestatus.inc.php  procregisterlist.inc.php  pubkeysuccess.inc.php  saveprivatekey.inc.php  saveprivatekeysuccess.inc.php  selectproc.inc.php  serverstatus.inc.php  sidebar.inc.php  vote.inc.php  votesuccess.inc.php
EVTs/adder/php-adder/var/: Makefile.am  Makefile.in
EVTs/adder/php-adder/www/: Makefile.am  Makefile.in  guide.php  index.php  procadmin.php  status.php
EVTs/adder/php-adder/www/images/: Makefile.am  Makefile.in  adder-large-0.1.tif  adder-small-0.1.tif
EVTs/adder/php-adder/www/scripts/: Makefile.am  Makefile.in  createkey.js  createpolynomial.js  createprocedure.js  decrypt.js  getprivkey.js  login.js  makeuser.js  procregisterlist.js  saveprivatekey.js  vote.js
EVTs/adder/php-adder/www/stylesheets/: Makefile.am  Makefile.in  style.css
EVTs/broncode stemdienst Kiezen op Afstand 2004/: LEESMIJ EERST.rtf  Nederlandse vertaling GPL D10.txt
EVTs/solon-voting/: README.md  TODO.md  config.py  solon_server.py
EVTs/votebox-read-only/: LICENSE.txt  README  build.sh  lnode.sh  lrun.sh  node.sh  vb.conf
EVTs/votebox-rpi-read-only/: Makefile  Makefile.Release  NOTES  ballot.dtd  ballot.xml  mainwindow.ui
Tally/Victoria/: BallotDrawHelper.cs  CalculateFPP.xml  CalculatePref.xml  VEC.1003.01a.doc
Tally/opencount/: .gitignore  README
Tally/tevs/: PILB.pth  all.sh  bootstrap.sh  test.py  wbt.py
(+4447 files in other folders)
