sharedir = $(datadir)/$(PACKAGE_NAME)
share_DATA = adder_interface.php \
	     applet-object-include-gecko-1.5.txt \
	     applet-object-include-gecko-1.4.txt \
	     applet-object-include-msie-1.5.txt \
	     applet-object-include-msie-1.4.txt \
	     applet-include.txt \
	     applet-object-include-1.4.txt \
	     applet-object-include-1.5.txt \
	     applet-applet-include.txt \
	     createkey.inc.php \
	     createpolynomial.inc.php \
	     createprocedure.inc.php \
	     decrypt.inc.php \
	     decryptsuccess.inc.php \
	     error.inc.php \
	     footer.inc.php \
	     getauthkey.inc.php \
	     getprivkey.inc.php \
	     getvote.inc.php \
	     getballotproof.inc.php \
	     header.inc.php \
	     login.inc.php \
	     logoutsuccess.inc.php \
             makeuser.inc.php \
	     makeusersuccess.inc.php \
	     mimetype.inc.php \
	     plugin.inc.php \
	     polynomialsuccess.inc.php \
	     procedurestatus.inc.php \
	     procregisterlist.inc.php \
	     pubkeysuccess.inc.php \
	     saveprivatekey.inc.php \
	     saveprivatekeysuccess.inc.php \
	     selectproc.inc.php \
	     serverstatus.inc.php \
	     sidebar.inc.php \
	     vote.inc.php \
	     votesuccess.inc.php
EXTRA_DIST = $(share_DATA)
